--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <html>
 
 <head>
+  <title> Personal Bio </title>
   <meta charset="UTF-8">
 </head>
 
 <body>
-
+  <h1> Hello </h1>
 </body>
 
 </html>
