Added background and Interest facts

--- a/index.html
+++ b/index.html
@@ -5,10 +5,25 @@
 <head>
   <title> Personal Bio </title>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="personalbio.css"/>
 </head>
 
 <body>
-  <h1> Hello </h1>
+  <h1> Lewis Lomugdang Bio</h1>
+  <h3> 1.Interests</h3>
+  <div style="color:LightCoral">
+    <p> Hobbies: </p>
+    <ul>
+      <li>Computer Information Systems major</li>
+      <li>Basketball</li>
+      <li>Food- sushi and any spicy food</li>
+      <li>Hiking</li>
+      <li>Tasty videos</li>
+      <li>Music: Anything Justin Timberlake, and throwback hits</li>
+      <li>Movies and Video Games</li>
+    </ul>
+    <p> I want to pursue in a career in Systems Adminstration
+      or something with Web Development</p>
+  </div>
 </body>
-
 </html>
