--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <li>Movies and Video Games</li>
     </ul>
     <p> I want to pursue in a career in Systems Adminstration
-      or something with Web Development</p>
+      or Web Development</p>
   </div>
 </body>
 </html>
