--- a/index.html
+++ b/index.html
@@ -21,9 +21,26 @@
       <li>Tasty videos</li>
       <li>Music: Anything Justin Timberlake, and throwback hits</li>
       <li>Movies and Video Games</li>
+      <li>Involvement</li>
     </ul>
+    <p>I've been involved in many organizations on campus, from the
+      Filipino American Student Organization, Summer Orientation, LeadCat,
+      Cross-Cultural Leadership Center, and Phi Delta Theta.
+    </p>
     <p> I want to pursue in a career in Systems Adminstration
-      or Web Development</p>
+      or Web Development.
+    </p>
   </div>
+  <h3> 2. Computer Biography</h3>
+  <p>I have learned a little bit of Java, but have mainly learned
+    C++ through the University. I know how to troubleshoot and
+    disassembling PC's. What motivated me to take a course in web
+    development was an interest about the computer world and other
+    technologies around the world. Being able to create your own website
+    and publishing anything to grab other people's attention intrigued me.
+    My dad is a Systems Administrator and I want to do what he does, since
+    computers are advancing more and more each year. I have always found
+    web development interesting and was always curious in learning it.
+  </p>
 </body>
 </html>
