--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <li>Tasty videos</li>
       <li>Music: Anything Justin Timberlake, and throwback hits</li>
       <li>Movies and Video Games</li>
+      <li>TV shows</li>
       <li>Involvement</li>
     </ul>
     <p>I've been involved in many organizations on campus, from the
@@ -32,9 +33,10 @@
     </p>
   </div>
   <h3> 2. Computer Biography</h3>
-  <p>I have learned a little bit of Java, but have mainly learned
-    C++ through the University. I know how to troubleshoot and
-    disassembling PC's. What motivated me to take a course in web
+  <p>Similar to what I have on my resume... I have learned a little bit of Java, but have mainly learned
+    C++ and SQL through the University. I know how to troubleshoot and
+    disassembling PC's. Software applications that I have used are Photoshop and
+    Microsoft Office, and Caspio. What motivated me to take a course in web
     development was an interest about the computer world and other
     technologies around the world. Being able to create your own website
     and publishing anything to grab other people's attention intrigued me.
@@ -42,5 +44,7 @@
     computers are advancing more and more each year. I have always found
     web development interesting and was always curious in learning it.
   </p>
+  <h3> 3. Development Portfolio</h3>
+  <a href="https://github.com/dlomugdang"> Github Account </a>
 </body>
 </html>
