--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <!-- Author: Lewis Lomugdang -->
 <html>
-
 <head>
   <title> Personal Bio </title>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="personalbio.css"/>
 </head>
-
 <body>
   <h1> Lewis Lomugdang Bio</h1>
   <h3> 1.Interests</h3>
@@ -33,9 +31,9 @@
     </p>
   </div>
   <h3> 2. Computer Biography</h3>
-  <p>Similar to what I have on my resume... I have learned a little bit of Java, but have mainly learned
-    C++ and SQL through the University. I know how to troubleshoot and
-    disassembling PC's. Software applications that I have used are Photoshop and
+  <p>Similar to what I have on my resume... I have learned a little bit of Java,
+    but have mainly learned C++ and SQL through the University. I know how to troubleshoot
+    and disassembling PC's. Software applications that I have used are Photoshop and
     Microsoft Office, and Caspio. What motivated me to take a course in web
     development was an interest about the computer world and other
     technologies around the world. Being able to create your own website
@@ -46,5 +44,12 @@
   </p>
   <h3> 3. Development Portfolio</h3>
   <a href="https://github.com/dlomugdang"> Github Account </a>
+  <h5>Repository Links</h5>
+  <ul>
+    <li><a href="https://github.com/dlomugdang/ProfessorPage/blob/master/index.html">ProfessorPage</a></li>
+    <li><a href="https://github.com/dlomugdang/MovieSpoiler">MovieSpoiler</a></li>
+    <li><a href="https://github.com/dlomugdang/Edsger-Dijkstra">Edsger-Dijkstra</a></li>
+    <li><a href="https://github.com/dlomugdang/x08-Style/blob/dlomugdang/x08-style.html">x08-Style</a></li>
+  </ul>
 </body>
 </html>
