--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- Author: Lewis Lomugdang -->
-<html>
+<html lang="en">
 <head>
   <title> Personal Bio </title>
   <meta charset="UTF-8">
@@ -45,11 +45,11 @@
   <h3> 3. Development Portfolio</h3>
   <a href="https://github.com/dlomugdang"> Github Account </a>
   <h5>Repository Links</h5>
-  <ul>
-    <li><a href="https://github.com/dlomugdang/ProfessorPage/blob/master/index.html">ProfessorPage</a></li>
-    <li><a href="https://github.com/dlomugdang/MovieSpoiler">MovieSpoiler</a></li>
-    <li><a href="https://github.com/dlomugdang/Edsger-Dijkstra">Edsger-Dijkstra</a></li>
-    <li><a href="https://github.com/dlomugdang/x08-Style/blob/dlomugdang/x08-style.html">x08-Style</a></li>
-  </ul>
+    <a href="https://github.com/dlomugdang/ProfessorPage/blob/master/index.html">ProfessorPage</a>
+    <p>This shows the change of style of the background page.</p>
+    <a href="https://github.com/dlomugdang/MovieSpoiler">MovieSpoiler</a>
+    <p>This one demonstrates the use of selector and CSS skills</p>
+    <a href="https://github.com/dlomugdang/x08-Style/blob/dlomugdang/x08-style.html">x08-Style</a>
+    <p>Changes background and use of font and span style</p>
 </body>
 </html>
