--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <li>TV shows</li>
       <li>Involvement</li>
     </ul>
+  </div>
     <p>I've been involved in many organizations on campus, from the
       Filipino American Student Organization, Summer Orientation, LeadCat,
       Cross-Cultural Leadership Center, and Phi Delta Theta.
@@ -29,7 +30,10 @@
     <p> I want to pursue in a career in Systems Adminstration
       or Web Development.
     </p>
-  </div>
+    <h3>Picture of favorite Artist and TV shows</h3>
+    <b><p><span style="color:maroon">The Flash</span></p></b>
+    <img src="http://vignette1.wikia.nocookie.net/theflash/images/d/d9/The_Flash_TV_Series_Logo-2.jpg/revision/latest?cb=20151025004642"
+    alt="The Flash">
   <h3> 2. Computer Biography</h3>
   <p>Similar to what I have on my resume... I have learned a little bit of Java,
     but have mainly learned C++ and SQL through the University. I know how to troubleshoot
@@ -50,6 +54,6 @@
     <a href="https://github.com/dlomugdang/MovieSpoiler">MovieSpoiler</a>
     <p>This one demonstrates the use of selector and CSS skills</p>
     <a href="https://github.com/dlomugdang/x08-Style/blob/dlomugdang/x08-style.html">x08-Style</a>
-    <p>Changes background and use of font and span style</p>
+    <p>Assigned background with no repeats and use of font and span style</p>
 </body>
 </html>
