--- a/index.html
+++ b/index.html
@@ -30,10 +30,18 @@
     <p> I want to pursue in a career in Systems Adminstration
       or Web Development.
     </p>
-    <h3>Picture of favorite Artist and TV shows</h3>
+    <h3>Picture of favorite Artist,TV shows,Movie</h3>
     <b><p><span style="color:maroon">The Flash</span></p></b>
-    <img src="http://vignette1.wikia.nocookie.net/theflash/images/d/d9/The_Flash_TV_Series_Logo-2.jpg/revision/latest?cb=20151025004642"
+    <img src="http://www.denofgeek.us/sites/denofgeekus/files/8/13/the-flash-tv-series-review.jpg"
     alt="The Flash">
+    <i><p>Justin Timberlake</i></p>
+    <img src="http://images4.mtv.com/uri/mgid:uma:video:mtv.com:936184?width=657&height=370&crop=true&quality=0.85"
+    alt="Justin Timberlake">
+    <b><p><span style="color:green">Green Arrow</span></p></b>
+    <img src="https://images.moviepilot.com/image/upload/c_fill,h_470,q_auto:good,w_620/emtvudeignibewxpxj2a.jpg"
+    alt="Green Arrow">
+    <b><p>The Shawshank Redemption</b></p>
+    <img src="https://images-na.ssl-images-amazon.com/images/I/519NBNHX5BL.jpg" alt="The Shawshank Redemption">
   <h3> 2. Computer Biography</h3>
   <p>Similar to what I have on my resume... I have learned a little bit of Java,
     but have mainly learned C++ and SQL through the University. I know how to troubleshoot
