--- a/index.html
+++ b/index.html
@@ -4,64 +4,26 @@
 <head>
   <title> Personal Bio </title>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="personalbio.css"/>
+  <link rel="stylesheet" type="text/css" href="personalbio.css"/>
 </head>
 <body>
   <h1> Lewis Lomugdang Bio</h1>
-  <h3> 1.Interests</h3>
-  <div style="color:LightCoral">
-    <p> Hobbies: </p>
-    <ul>
-      <li>Computer Information Systems major</li>
-      <li>Basketball</li>
-      <li>Food- sushi and any spicy food</li>
-      <li>Hiking</li>
-      <li>Tasty videos</li>
-      <li>Music: Anything Justin Timberlake, and throwback hits</li>
-      <li>Movies and Video Games</li>
-      <li>TV shows</li>
-      <li>Involvement</li>
-    </ul>
-  </div>
-    <p>I've been involved in many organizations on campus, from the
-      Filipino American Student Organization, Summer Orientation, LeadCat,
-      Cross-Cultural Leadership Center, and Phi Delta Theta.
-    </p>
-    <p> I want to pursue in a career in Systems Adminstration
-      or Web Development.
-    </p>
-    <h3>Picture of favorite Artist,TV shows,Movie</h3>
-    <b><p><span style="color:maroon">The Flash</span></p></b>
-    <img src="http://www.denofgeek.us/sites/denofgeekus/files/8/13/the-flash-tv-series-review.jpg"
-    alt="The Flash">
-    <i><p>Justin Timberlake</i></p>
-    <img src="http://images4.mtv.com/uri/mgid:uma:video:mtv.com:936184?width=657&height=370&crop=true&quality=0.85"
-    alt="Justin Timberlake">
-    <b><p><span style="color:green">Green Arrow</span></p></b>
-    <img src="https://images.moviepilot.com/image/upload/c_fill,h_470,q_auto:good,w_620/emtvudeignibewxpxj2a.jpg"
-    alt="Green Arrow">
-    <b><p>The Shawshank Redemption</b></p>
-    <img src="https://images-na.ssl-images-amazon.com/images/I/519NBNHX5BL.jpg" alt="The Shawshank Redemption">
-  <h3> 2. Computer Biography</h3>
-  <p>Similar to what I have on my resume... I have learned a little bit of Java,
-    but have mainly learned C++ and SQL through the University. I know how to troubleshoot
-    and disassembling PC's. Software applications that I have used are Photoshop and
-    Microsoft Office, and Caspio. What motivated me to take a course in web
-    development was an interest about the computer world and other
-    technologies around the world. Being able to create your own website
-    and publishing anything to grab other people's attention intrigued me.
-    My dad is a Systems Administrator and I want to do what he does, since
-    computers are advancing more and more each year. I have always found
-    web development interesting and was always curious in learning it.
+  <p>This is the introduction page, where I will share my Interets, Computing
+    Biography, and Development Portfolio. Click on the links below to take you
+    to each of the topics to learn more about me!
   </p>
-  <h3> 3. Development Portfolio</h3>
-  <a href="https://github.com/dlomugdang"> Github Account </a>
-  <h5>Repository Links</h5>
-    <a href="https://github.com/dlomugdang/ProfessorPage/blob/master/index.html">ProfessorPage</a>
-    <p>This shows the change of style of the background page.</p>
-    <a href="https://github.com/dlomugdang/MovieSpoiler">MovieSpoiler</a>
-    <p>This one demonstrates the use of selector and CSS skills</p>
-    <a href="https://github.com/dlomugdang/x08-Style/blob/dlomugdang/x08-style.html">x08-Style</a>
-    <p>Assigned background with no repeats and use of font and span style</p>
+  <nav>
+    <div class="nav-tab">
+      <a href="interest.html" class="navigation">Interest</a>
+    </div>
+    <div class="nav-tab">
+      <a href="computerbiography.html" class="navigation">Computer Biography</a>
+    </div>
+    <div class="nav-tab">
+      <a href="developmentportfolio.html" class="navigation">Development Portfolio</a>
+    </div>
+  </nav>
+  <h2> Computer Information Systems student at CSU Chico</h2>
+  <a href="http://www.csuchico.edu/">CSU Chico</a>
 </body>
 </html>
