--- a/computerbiography.html
+++ b/computerbiography.html
@@ -18,6 +18,7 @@
     </div>
   </nav>
   <h3> 2. Computer Biography</h3>
+  <div>
   <p>Similar to what I have on my resume... I have learned a little bit of Java,
     but have mainly learned C++ and SQL through the University. I know how to troubleshoot
     and disassembling PC's. Software applications that I have used are Photoshop and
@@ -29,5 +30,6 @@
     computers are advancing more and more each year. I have always found
     web development interesting and was always curious in learning it.
   </p>
+</div>
 </body>
 </html>
