--- a/developmentportfolio.html
+++ b/developmentportfolio.html
@@ -26,5 +26,7 @@
     <p>This one demonstrates the use of selector and CSS skills</p>
     <a href="https://github.com/dlomugdang/x08-Style/blob/dlomugdang/x08-style.html">x08-Style</a>
     <p>Assigned background with no repeats and use of font and span style</p>
+    <a href="https://github.com/dlomugdang/BuildingTabs">BuildingTabs</a>
+    <p>Demonstrates making tabs</p>
 </body>
 </html>
